benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/debug/bignum_ModExpPow2_Add_DivMod_iter1_error.log
=== Verification Error - Iteration 1 ===
File: benchmarks/verus/bignum/files/bignum_ModExpPow2_Add_DivMod.rs
Time: 2025-09-15 10:54:16

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: warning: denote infinite loops with `loop { ... }`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:64:5
   |
64 |     while true {
   |     ^^^^^^^^^^ help: use `loop`
   |
   = note: `#[warn(while_true)]` on by default

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:110:13
    |
110 |     if n == 0 {
    |        -    ^ expected `int`, found integer
    |        |
    |        expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:121:36
    |
121 |         let mod_val = if sx_int == 0 { 0 } else { 1 } % Str2Int(sz@);
    |                          ------    ^ expected `nat`, found integer
    |                          |
    |                          expected because this is `vstd::prelude::nat`

error[E0277]: cannot calculate the remainder of `{integer}` divided by `vstd::prelude::nat`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:121:55
    |
121 |         let mod_val = if sx_int == 0 { 0 } else { 1 } % Str2Int(sz@);
    |                                                       ^ no implementation for `{integer} % vstd::prelude::nat`
    |
    = help: the trait `std::ops::Rem<vstd::prelude::nat>` is not implemented for `{integer}`
    = help: the following other types implement trait `std::ops::Rem<Rhs>`:
              `&f128` implements `std::ops::Rem<f128>`
              `&f128` implements `std::ops::Rem`
              `&f16` implements `std::ops::Rem<f16>`
              `&f16` implements `std::ops::Rem`
              `&f32` implements `std::ops::Rem<f32>`
              `&f32` implements `std::ops::Rem`
              `&f64` implements `std::ops::Rem<f64>`
              `&f64` implements `std::ops::Rem`
            and 62 others

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:130:47
    |
130 |         let half = ModExpPow2(sx, &sy[0..(n + 1) / 2], n / 2, sz);
    |                                           -   ^ expected `int`, found integer
    |                                           |
    |                                           expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:130:52
    |
130 |         let half = ModExpPow2(sx, &sy[0..(n + 1) / 2], n / 2, sz);
    |                                          -------   ^ expected `int`, found integer
    |                                          |
    |                                          expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:130:42
    |
130 |         let half = ModExpPow2(sx, &sy[0..(n + 1) / 2], n / 2, sz);
    |                                          ^^^^^^^^^^^ expected integer, found `int`

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:130:60
    |
130 |         let half = ModExpPow2(sx, &sy[0..(n + 1) / 2], n / 2, sz);
    |                                                        -   ^ expected `int`, found integer
    |                                                        |
    |                                                        expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:131:47
    |
131 |         let full = ModExpPow2(&half, &sx, n / 2, sz);
    |                                           -   ^ expected `int`, found integer
    |                                           |
    |                                           expected because this is `vstd::prelude::int`

error: aborting due to 8 previous errors; 1 warning emitted

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.

--------------------------------------------------------------------------------

Additional Output:
warning: denote infinite loops with `loop { ... }`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:64:5
   |
64 |     while true {
   |     ^^^^^^^^^^ help: use `loop`
   |
   = note: `#[warn(while_true)]` on by default

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:110:13
    |
110 |     if n == 0 {
    |        -    ^ expected `int`, found integer
    |        |
    |        expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:121:36
    |
121 |         let mod_val = if sx_int == 0 { 0 } else { 1 } % Str2Int(sz@);
    |                          ------    ^ expected `nat`, found integer
    |                          |
    |                          expected because this is `vstd::prelude::nat`

error[E0277]: cannot calculate the remainder of `{integer}` divided by `vstd::prelude::nat`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:121:55
    |
121 |         let mod_val = if sx_int == 0 { 0 } else { 1 } % Str2Int(sz@);
    |                                                       ^ no implementation for `{integer} % vstd::prelude::nat`
    |
    = help: the trait `std::ops::Rem<vstd::prelude::nat>` is not implemented for `{integer}`
    = help: the following other types implement trait `std::ops::Rem<Rhs>`:
              `&f128` implements `std::ops::Rem<f128>`
              `&f128` implements `std::ops::Rem`
              `&f16` implements `std::ops::Rem<f16>`
              `&f16` implements `std::ops::Rem`
              `&f32` implements `std::ops::Rem<f32>`
              `&f32` implements `std::ops::Rem`
              `&f64` implements `std::ops::Rem<f64>`
              `&f64` implements `std::ops::Rem`
            and 62 others

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:130:47
    |
130 |         let half = ModExpPow2(sx, &sy[0..(n + 1) / 2], n / 2, sz);
    |                                           -   ^ expected `int`, found integer
    |                                           |
    |                                           expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:130:52
    |
130 |         let half = ModExpPow2(sx, &sy[0..(n + 1) / 2], n / 2, sz);
    |                                          -------   ^ expected `int`, found integer
    |                                          |
    |                                          expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:130:42
    |
130 |         let half = ModExpPow2(sx, &sy[0..(n + 1) / 2], n / 2, sz);
    |                                          ^^^^^^^^^^^ expected integer, found `int`

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:130:60
    |
130 |         let half = ModExpPow2(sx, &sy[0..(n + 1) / 2], n / 2, sz);
    |                                                        -   ^ expected `int`, found integer
    |                                                        |
    |                                                        expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExpPow2_Add_DivMod_impl.rs:131:47
    |
131 |         let full = ModExpPow2(&half, &sx, n / 2, sz);
    |                                           -   ^ expected `int`, found integer
    |                                           |
    |                                           expected because this is `vstd::prelude::int`

error: aborting due to 8 previous errors; 1 warning emitted

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
